<package>
  <name>vrep_common</name>
  <description>Common messages</description>
  <maintainer email="marc@coppeliarobotics.com">Marc</maintainer>
  <version>3.1.2</version>
  <author>Marc</author>
  <license>GPLv3</license>
  <url>http://www.coppeliarobotics.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <run_depend>roscpp</run_depend>
</package>


